# obs-xdg-portal

./: README.md  desktop-capture.c  desktop-capture.h  meson.build  obs-xdg-portal.c  pipewire.c  pipewire.h  window-capture.c  window-capture.h
locale/: en-US.ini  pt-BR.ini
